# RustBlkHat-Kerkour

./: README.md
ch1/sha1_cracker/: Cargo.toml
ch1/sha1_cracker/src/: main.rs
ch2/tricoder/: Cargo.toml
ch2/tricoder/src/: common_ports.rs  main.rs  model.rs  ports.rs  subdomains.rs
ch3/snippets/combinators/src/: main.rs
